Updated book inventory

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,9 +21,10 @@ spring.mail.password=uxaw issy iogo dnql
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-library.lateFee.first10days:0
-library.lateFee.next10days:2
-library.lateFee.after20days:5
-library.lateFee.after30days:10
+library.lateFee.first10days=0
+library.lateFee.next10days=2
+library.lateFee.after20days=5
+library.lateFee.after30days=10
+reservationDays=2
 
 
